--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=HelloWorld Java project analyzed with the SonarQube Runner
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=src
+sonar.sources=src/main/java
 
 # User authentication
 sonar.login=admin
