--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -16,4 +16,4 @@ sonar.language=java
 sonar.sourceEncoding=UTF-8
 
 #location of binaries
-sonar.java.binaries=./target/classes
+sonar.java.binaries=**/target/classes
