--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectName=HelloWorld Java project analyzed with the SonarQube Runner
 sonar.projectVersion=1.0
 
 # Comma-separated paths to directories with sources (required)
-sonar.sources=./src
+sonar.sources=src
 
 # User authentication
 sonar.login=admin
@@ -16,4 +16,4 @@ sonar.language=java
 sonar.sourceEncoding=UTF-8
 
 #location of binaries
-sonar.java.binaries=target/classes/com/example/demo
+sonar.java.binaries=target/classes
