--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,16 +1,15 @@
-# Required metadata
-sonar.projectKey=HelloWorld-sonar-runner
-sonar.projectName=HelloWorld Java project analyzed with the SonarQube Runner
+sonar.host.url=http://localhost:9000
+#----- Default source code encoding
+sonar.sourceEncoding=UTF-8
+
+sonar.projectKey=java-sonar-scanner-simple-2
+sonar.projectName=Simple 2 Java Project analyzed with the SonarQube Scanner
 sonar.projectVersion=1.0
 
-# Comma-separated paths to directories with sources (required)
+sonar.scm.disabled=True
+
 sonar.sources=src
 
-# User authentication
-sonar.login=admin
-sonar.password=admin
-# Language
 sonar.language=java
 
-# Encoding of the source files
 sonar.sourceEncoding=UTF-8
